Closed Bug 153757 Opened 23 years ago Closed 23 years ago

hasAttribute on a HTML label crashes

Categories

(Core :: DOM: Core & HTML, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.0.1

People

(Reporter: rginda, Assigned: jst)

References

Details

(Keywords: crash, Whiteboard: [adt2 RTM] [ETA 06/26])

Attachments

(1 file)

#0 0x41ba7e3c in nsHTMLLabelElement::HasAttribute (this=0x8b00d98, aName=@0x8b46110, aReturn=0xbfffaab0) at nsHTMLLabelElement.cpp:156 155 NS_IMETHOD HasAttribute(const nsAString& aName, PRBool* aReturn) { 156 return HasAttribute(aName, aReturn); 157 } When called, this method recurses on itself until it blows the stack.
Comment on attachment 88868 [details] [diff] [review] Patch Duh! sr=jst
Attachment #88868 - Flags: superreview+
Checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
maybe this obvious fix should go on the branch?
Nominating, this is a trivial fix for a guaranteed unconditional crash, there's no reason to not take this fix AFAICT.
Blocks: 143047
Keywords: crash
Whiteboard: [adt2 RTM] [ETA 06/26]
Target Milestone: --- → mozilla1.0.1
adding adt1.0.1+. Please get drivers approval before checking into the branch.
Keywords: adt1.0.1adt1.0.1+
drivers approval request sent.
Comment on attachment 88868 [details] [diff] [review] Patch Please land this on the 1.0.1 branch. Once there, replace the "mozilla1.0.1+" keyword with the "fixed1.0.1" keyword.
Attachment #88868 - Flags: approval+
QA Contact: desale → stummala
verified on win32 and linux branch
Keywords: verified1.0.1
Component: DOM: Core → DOM: Core & HTML
QA Contact: stummala → general
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: