Fix for bug 153757 (hasAttribute on a HTML label crashes). r=caillon, sr=jst.